# Telemetry-Forge

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: config.example.yaml
scripts/: run_daemon.sh  run_once.sh
src/ceradon_sam_bot/: __init__.py  config.py  main.py  normalize.py  notify_email.py  render.py  sam_client.py  scoring.py  store.py
tests/: test_config_validation.py  test_scoring.py  test_store_dedupe.py
